<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evaluation</string>
    <string name="rader_chart">Radar</string>
    <string name="eer_table">Table</string>
    <string name="action_settings">Settings</string>
    
    <string name="user_id">ID</string>
    <string name="user_name">NAME</string>
    <string name="eer_five">EER-5</string>
    <string name="eer_ten">EER-10</string>
    <string name="eer_twenty">EER-20</string>
    
    <string name="test_pwd_five">password = 01478</string>
    <string name="test_pwd_six">password = 014367</string>
    
    <string name="user_list">User</string>
    <string name="user_search">User Name</string>
    <string name="pin_report">Report</string>

</resources>
