<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
	android:paddingRight="4dp"
    android:orientation="horizontal" >
    
	
    <TextView
        android:id="@+id/tv_table_id"
        android:text="@string/user_id"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_table_user"
        android:text="@string/user_name"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_table_eer_five"
        android:text="@string/eer_five"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_table_eer_ten"
        android:text="@string/eer_ten"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tv_table_eer_twen"
        android:text="@string/eer_twenty"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    
    
</LinearLayout>
