<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edu.neo.activity.HomeActivity" >

    <RadioGroup
        android:id="@+id/rg_bottom_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        
        <RadioButton
			android:id="@+id/rbtn_list_all"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="20dp"
			android:background="@drawable/btn_radio_selector"
			android:button="@null"
			android:gravity="center"
			android:checked="true"
			android:text="@string/user_list"
			android:textColor="@color/my_white"
			android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbtn_rdchart_eer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radio_selector"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/rader_chart"
            android:textColor="@color/my_white"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/rbtn_table_eer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            android:background="@drawable/btn_radio_selector"
            android:button="@null"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/eer_table"
            android:textColor="@color/my_white"
            android:textSize="16sp" />
        
    </RadioGroup>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/m_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/rg_bottom_btns" >
    </android.support.v4.view.ViewPager>

</RelativeLayout>
